bugfix: table description text not wrapping and overwriting other columns

--- a/src/components/TableCard/TableCard.scss
+++ b/src/components/TableCard/TableCard.scss
@@ -86,5 +86,9 @@
 
   &__value-text {
     margin: 0;
+    inline-size: 90%;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
   }
 }
